# gotta-eat

./: README.md  env-example  pyproject.toml
frontend/: README.md  pyproject.toml  viewer.py
frontend/src/viewer/: viewer.py
gotta-eat/: README.md  pyproject.toml
gotta-eat/src/gotta_eat/: playground.py  server.py
src/: server.py
swifty-frontend/: build.sh  viewer  viewer.swift
