[project]
name = "viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "kivy>=2.3.0",
    "kivymd>=1.2.0",
    "requests>=2.32.3",
]

[[project.authors]]
name = "Kirk Kaiser"
email = "kirk@zothcorp.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
viewer = "viewer.viewer:main"