[project]
name = "gotta-eat"
version = "0.1.0"
description = "figuring out what to eat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.1.1",]
[[project.authors]]
name = "Kirk Kaiser"
email = "kirk@zothcorp.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
gotta-eat = "gotta_eat:main"
